# coros_data_extractor

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  poetry.toml  pyproject.toml
coros_data_extractor/: __init__.py  config.py  data.py  model.py
coros_data_extractor/data/: __init__.py  api_model.py  constants.py
