[tool.nbqa.config]
black = "pyproject.toml"

[tool.poetry]
name = "coros_data_extractor"
version = "0.1.0"
description = ""
authors = ["guillaume <guillaume.androz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
garmin-fit-sdk = "^21.158"
pandas = "^2.2"
matplotlib = "^3.10.1"
numpy = "^2.2.3"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
requests = "^2.32.3"
pydantic = "^2.10.6"
mplcursors = "^0.6"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"

[tool.black]
line-length = 120
exclude = '''
(
  /(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  )/
  | /docs/
  | /examples/
  | /tests/
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
