[project]
name = "coros_data_extractor"
version = "0.1.0"
description = "Extract and analyze data from COROS Training Hub"
authors = [
    {name = "guillaume", email = "guillaume.androz@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "pydantic>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.8.0",
    "ipykernel>=7.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
]
ignore = [
    "E203",   # whitespace before ':'
    "D400",   # first line should end with a period (from flake8-docstrings)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
profile = "black"

[tool.nbqa.config]
ruff = "pyproject.toml"
